[gd_scene load_steps=11 format=3 uid="uid://n615rx02auyl"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_2o8nt"]
[ext_resource type="Script" path="res://ui/timer.gd" id="4_cekrk"]
[ext_resource type="PackedScene" uid="uid://dwrgxipppsvqh" path="res://menus/pause_menu.tscn" id="6_nmmub"]
[ext_resource type="PackedScene" uid="uid://budbi2xh55xtg" path="res://menus/level_finish_menu.tscn" id="7_af7if"]
[ext_resource type="FontFile" uid="uid://dyy4mvx1k1on2" path="res://assets/fonts/fantasque-sans-mono.bold.otf" id="7_yas1d"]
[ext_resource type="Theme" uid="uid://bwnv8b362a2w7" path="res://menus/menu_theme.tres" id="11_qn1a0"]

[sub_resource type="Animation" id="Animation_eqahf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ckr47"]
resource_name = "fade_in"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_vnv0l"]
resource_name = "fade_out"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oe3lb"]
_data = {
"RESET": SubResource("Animation_eqahf"),
"fade_in": SubResource("Animation_ckr47"),
"fade_out": SubResource("Animation_vnv0l")
}

[node name="ui" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_2o8nt")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="timer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
script = ExtResource("4_cekrk")

[node name="Label" type="Label" parent="timer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -410.0
offset_top = 55.0
offset_right = -32.0
offset_bottom = 141.0
grow_horizontal = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 18
theme_override_fonts/font = ExtResource("7_yas1d")
theme_override_font_sizes/font_size = 82
text = "00:00:000"
horizontal_alignment = 2

[node name="level_label" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -185.0
offset_top = 16.0
offset_right = -33.0
offset_bottom = 55.0
grow_horizontal = 0
theme = ExtResource("11_qn1a0")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 18
theme_override_font_sizes/font_size = 36
text = "Level 1"
horizontal_alignment = 2

[node name="ghost_label" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -755.0
offset_top = 1025.0
offset_right = -33.0
offset_bottom = 1064.0
grow_horizontal = 0
theme = ExtResource("11_qn1a0")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 18
theme_override_font_sizes/font_size = 36
text = "Online Ghost - Neverknow247: 00:03:033"
horizontal_alignment = 2

[node name="pop_up_label" type="Label" parent="."]
custom_minimum_size = Vector2(640, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_top = 32.0
offset_right = 320.0
offset_bottom = 71.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource("11_qn1a0")
theme_override_colors/font_color = Color(0.4, 0.803922, 0.666667, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 36
text = "* New Found *"
horizontal_alignment = 1
vertical_alignment = 1

[node name="pause_menu" parent="." instance=ExtResource("6_nmmub")]
visible = false

[node name="level_finish_menu" parent="." instance=ExtResource("7_af7if")]
visible = false

[node name="transition" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oe3lb")
}

[connection signal="fade_out" from="pause_menu" to="." method="_on_pause_menu_fade_out"]
[connection signal="on_pause" from="pause_menu" to="." method="_on_pause_menu_on_pause"]
[connection signal="fade_out" from="level_finish_menu" to="." method="_on_level_finish_menu_fade_out"]
